Text is too close to border. Fix (#715)

--- a/frontend/css/common_styles.css
+++ b/frontend/css/common_styles.css
@@ -9,7 +9,7 @@
     }
 
     #mainArea {
-        padding: 0.4em;
+        padding: 0.4em !important;
     }
 }
 
